--- a/src/App.css
+++ b/src/App.css
@@ -3,18 +3,18 @@
 }
 
 .App-logo {
-  height: 40vmin;
+  height: 10vmin;
   pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+    animation: App-logo-spin infinite 7s linear;
   }
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #effaf9;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -35,4 +35,13 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+span {
+  color: rgb(105, 0, 0);
+}
+h1,h2 {
+  
+ 
+ color: #ff0000;
 }
