--- a/src/App.css
+++ b/src/App.css
@@ -1,47 +1,118 @@
-.App {
-  text-align: center;
+/* App.css */
+* {
+	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+		Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+html {
+	background-color: #ffffff;
+}
+
+.app-name {
+	font-size: 2.3rem;
+	color: rgb(0, 51, 59);
+	margin-bottom: 16px;
+}
+
+.App {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	width: 600px;
+	min-height: 440px;
+	background-color: rgba(110, 214, 255, 0.596);
+	text-align: center;
+	margin: 128px auto;
+	border-radius: 1000px;
+	padding-bottom: 32px;
+	box-shadow: 9px 9px 9px 1px rgb(0, 0, 0);
+}
+
+.city-search {
+	width: 100%;
+	max-width: 400px;
+	box-sizing: border-box;
+	border: 2px solid rgb(2, 2, 2);
+	outline: none;
+	border-radius: 1000px;
+	font-size: 16px;
+	background-color: #ffffff;
+	background-position: 10px 12px;
+	background-repeat: no-repeat;
+	padding: 12px 40px 12px 40px;
+	-webkit-transition: width 0.4s ease-in-out;
+	transition: width 0.4s ease-in-out;
+	color: #333;
+}
+
+.city-search:focus {
+	width: 100%;
+}
+
+.city-name {
+	font-size: 1.5rem;
+	color: #080808;
+	margin-bottom: 8px;
+}
+
+.date {
+	font-size: 1.25em;
+	font-weight: 500;
+	color: #00223d;
+}
+
+.icon-temp {
+	font-size: 3rem;
+	font-weight: 700;
+	color: #000000;
+	text-align: center;
+}
+
+.deg {
+	font-size: 1.3rem;
+	vertical-align: super;
+}
+
+.des-wind {
+	font-weight: 500;
+	color: #414141;
+}
+
+.error-message {
+	display: block;
+	text-align: center;
+	color: #d32f2f;
+	font-size: 24px;
+	margin-top: auto;
+}
+
+.Loader {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	height: 100%;
+}
+
+.Loader>div {
+	margin: 0 auto;
+}
+
+.weather-icon {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.weather-icon img {
+	width: 100px;
+	height: 100px;
+	border-radius: 50%;
+	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
 .App-logo {
   height: 10vmin;
   pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 7s linear;
-  }
-}
-
-.App-header {
-  background-color: #effaf9;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-span {
-  color: rgb(105, 0, 0);
-}
-h1,h2 {
-  
- 
- color: #ff0000;
+  border-radius: 50%;
+	box-shadow: 1px -5px 5px rgb(0, 0, 0);
 }
